plugins {
    id 'java'
    // 루트에는 플러그인을 적용하지 않고, 하위 모듈에서만 적용하도록 설정
    id 'org.springframework.boot' version '3.5.4' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'dev.muho'
version = '0.0.1-SNAPSHOT'
description = 'hotel-booking-platform'

// 모든 하위 모듈에 적용될 공통 설정
subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.named('test', Test) {
        useJUnitPlatform()
        // 테스트 실행 시 로그 출력 설정
        testLogging {
            events 'passed', 'skipped', 'failed'
        }
    }
}